# NeonCore

./: .gitignore  1_token_sentence.py  2_anim.py  3_anim.py  4_anim.py  CLAUDE.md  CONTRIBUTING.md  DIGITAL_SOUL.md  README.md  ROADMAP.md  T5.py  TODO.md  UML.html  Untitled Diagram.drawio  __main__.py  anim.py  character.py  client.py  cyberpunk.txt  cyberpunk_sentences.txt  cyberpunk_tokens.txt  game.py  main.py  map.py  play.ps1  pyproject.toml  reproduce_brawling_mechanics.py  reproduce_issue.py  run_game.py  run_local.py  server.py  sheet.py  skill_check.py  test_args.py  timestamp  token_sentence.py  uniname.py
.devcontainer/: devcontainer.json
.github/: funding.yml
NeonCore/: __init__.py  __main__.py  bootstrapper.py  config.py  seed_db.py  test.py  timestamp
animation_demos/: anim.py  map_unicode.py
docs/: UML.html  index.html  style.css  terminal.js
managers/: __init__.py  action_manager.py  characters_manager.py  command_manager.py  cyberpunk_manager.py  story_manager.py
story_modules/: __init__.py  heywood_industrial.py
tests/: repro_tab_completion.py  test_action_manager_completion.py  test_ai_connection.py  test_ambush_combat_flow.py  test_ambush_logic.py  test_arg_parsing.py  test_brawling_logic.py  test_brawling_regression.py  test_brawling_shell.py  test_character_sheet.py  test_combat_completion.py  test_combat_math.py  test_command_manager.py  test_command_refactor.py  test_item_persistence.py  test_npc_combat.py  test_npc_data.py  test_npc_duplication.py  test_persistent_stats.py  test_remote_connection.py  test_role_system.py  test_save_command.py  test_scene_skills.py  test_shell_integration.py  test_soul_integration.py  test_startup.py  test_tab_completion.py  test_world_expansion.py  (+1 more)
(+58 files in other folders)
