[build-system]
requires = ["setuptools-scm"]

[project]
name = "NeonCore"
dynamic = ["version"]
requires-python = ">=3.9"
authors = [{ name = "Miron Tewfik", email = "miron@street.yoga" }]
dependencies = ["openai"]

[tool.setuptools]
packages = [
    "NeonCore",
    "NeonCore.managers",
    "NeonCore.world",
    "NeonCore.npc_behavior",
    "NeonCore.story_modules",
    "NeonCore.utils",
    "NeonCore.ai_backends",
]

[project.optional-dependencies]
dev = ["black"]
windows = ["pyreadline3; platform_system=='Windows'"]
